@@ -7,6 +7,7 @@
 	to warning.
 	(epackage-lint-extra-checkdoc-advice): Remove.
 	(epackage-lint-extra-buffer-checkdoc-cleanup): New.
+	(epackage-batch-devel-lint-lisp): Add directoried to load-path.
 
 2012-01-03 Tue  Jari Aalto  <jari.aalto@cante.net>
 
